--- a/httpd-proxy/var-www-html/index.html
+++ b/httpd-proxy/var-www-html/index.html
@@ -12,6 +12,7 @@
         <li><a href="/php-shib-protected/">PHP App Protected by Shibboleth SP</a></li>
         <li><a href="/php-cas/">PHP App Protected by CAS hosted on Shibboleth IdP</a></li>
         <li><a href="/php-ssp-protected/">PHP App Protected by SimpleSAMLphp</a></li>
+        <li><a href="/fcrepo/">Fedora 4 with WebAC enabled by Shibboleth SP</a></li>
     </ul>
 
 </body>
